# ai-rewriter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  claude.md  pyproject.toml
scripts/: rewrite_hotkey.sh  run.sh
src/: __init__.py  main.py  models.py  prompts.py  providers.py  security.py
tests/: test_main.py  test_providers.py  test_security.py
