[project]
name = "ai-rewriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "google-genai>=1.63.0",
    "guardrails-ai>=0.8.1",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.52.0"]
grok = ["openai>=1.30.0"]
ollama = ["openai>=1.30.0"]
all = ["anthropic>=0.52.0", "openai>=1.30.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
